# findistll

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAW_THOUGHTS.md  CLOUDFLARE_DNS_FIX.md  COMPLETION_REPORT.md  C_EXT_AUDIT.md  DEPLOY_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  FINAL_SETUP_GUIDE.md  FINDISTILL_SPOKES.md  HARDENING_GUIDE.md  IDENTITY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_WS8_SPOKE_AB.md  MCP_GUIDE.md  MEMORY.md  ORACLE_DEPLOY_GUIDE.md  ORACLE_SETUP.md  PHASE5_GLOBAL_INTERCONNECTEDNESS_SCHEMA.md  PRECISO_PLAN.md  PRECISO_PROGRESS.md  QUICKSTART.md  README.md  README_DEPLOY.md  README_FINDISTILL.md  README_ORACLE_DEPLOY.md  RECOVERY_VAULT.md  RESEARCH_INSIGHTS.md  ROADMAP_DETAIL.md  ROADMAP_MASTER.md  RUN_MAC.md  SDK_DOC_DRAFT.md  SDK_MASTER_GUIDE.md  SERVER_REQUIREMENTS.md  TESTING.md  (+72 more)
AGENTS/: 00_PERSISTENT_MEMORY.md  01_CONDUCTOR.md  WORKER_1_PIPELINE_QUEUE_API.md  WORKER_2_DATAFORGE_FINDISTILL_QUALITY.md  WORKER_3_MLOPS_TRAINING_UI.md
PLANS/: EXECUTION_PHASE0_KICKOFF.md  Preciso_Enterprise_NonDev_Central_RAG_LLM_Master_Plan_v1.md
api/: __init__.py  app.py  auth.py  auth_service.py  db.py  handler.py  index.py  models.py  requirements.txt  schemas.py
app/: __init__.py  event_worker.py  globals.css  layout.tsx  main.py  ontology_job.py  page.tsx  worker.py
components/: ClientLayout.tsx  LoginPage.tsx
database/: 01_asura_schema.sql  02_spokes_schema.sql  manager.py  run_migration.py  supabase_manager.py
deployment/: huggingface_connector.py  pipeline_runner.py  supabase_uploader.py
(+513 files in other folders)
